fixes overflowing textlines

--- a/app/assets/stylesheets/shared/boilerplate.css
+++ b/app/assets/stylesheets/shared/boilerplate.css
@@ -161,16 +161,19 @@ nav a.active {
 .main article h1 {
     margin: 0 0 10px;
     font-size: 42px;
+    line-height: 42px;
 }
 
 .main article h2 {
     margin: 40px 0 0;
     font-size: 34px;
+    line-height: 34px;
 }
 
 .main article h3 {
     margin-bottom: 0;
     font-size: 30px;
+    line-height: 30px;
 }
 
 .main .fancy {
@@ -253,16 +256,19 @@ nav a.active {
     .main article h1 {
         margin: 0 0 20px;
         font-size: 52px;
+        line-height: 52px;
     }
 
     .main article h2 {
         margin: 40px 0 0;
         font-size: 36px;
+        line-height: 36px;
     }
 
     .main article h3 {
         margin-bottom: 0;
         font-size: 32px;
+        line-height: 32px;
     }
 
 /* ========================
